# DIAOS

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  temporal-client-backup.ts
scripts/: README.md  package-lock.json  package.json  run_tests.sh  setup.sh  slides-to-pdf.js  slides-to-ppt.js
temporal-client/: Dockerfile  package.json
temporal-client/app/(chat)/api/chat/: route.ts
temporal-client/app/(chat)/api/research/poll/[workflowId]/: route.ts
temporal-client/app/(chat)/api/research/status/[workflowId]/: route.ts
temporal-client/app/slide/: page.tsx
temporal-client/components/: chat.tsx  greeting.tsx  multimodal-input.tsx  research-activity-monitor.tsx  suggested-actions.tsx
temporal-client/hooks/: use-research-polling.ts
temporal-client/presentation/: README.md  index.html
temporal-worker/: .gitignore  Dockerfile  README.md  pyproject.toml
temporal-worker/scripts/: test.sh  test_workflow.py  verify_setup.py
temporal-worker/src/: worker.py
temporal-worker/src/activities/: dynamic_tool_activity.py  llm_activities.py  tool_registry_activities.py
temporal-worker/src/config/: arxiv_config.py
temporal-worker/src/tools/: __init__.py  arxiv_client_mcp.py  citation_analyzer.py  pdf_processor.py  registry.py  semantic_search.py
temporal-worker/src/workflows/: research_workflow.py
temporal-worker/tests/: conftest.py
temporal-worker/tests/unit/tools/: test_arxiv_client_mcp.py  test_citation_analyzer.py  test_pdf_processor.py  test_registry.py  test_semantic_search.py
